Remote Video Not showing Issue Fix

--- a/src/css/call_screen.css
+++ b/src/css/call_screen.css
@@ -576,6 +576,7 @@
     justify-content: center;
     align-items: center;
     min-height: 400px;
+    min-width: 400px;
   }
 
   .remote-video-wrapper {
